sistemata la gui delle raccomandazione